[gd_scene load_steps=16 format=2]

[ext_resource path="res://transition/transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Bohemian Typewriter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://HUD/pause_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/art/hp_bar.png" type="Texture" id=5]
[ext_resource path="res://HUD/art/hp_bar_filled.png" type="Texture" id=6]
[ext_resource path="res://HUD/art/weapon_panel.png" type="Texture" id=7]
[ext_resource path="res://button_theme.tres" type="Theme" id=8]
[ext_resource path="res://HUD/art/sfx_icon.png" type="Texture" id=9]
[ext_resource path="res://HUD/art/music_icon.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float brightness = 1.0;
uniform float contrast = 1.0;
uniform float saturation = 1.0;

void fragment() {
    vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;

    c.rgb = mix(vec3(0.0), c.rgb, brightness);
    c.rgb = mix(vec3(0.5), c.rgb, contrast);
    c.rgb = mix(vec3(dot(vec3(1.0), c.rgb) * 0.33333), c.rgb, saturation);

    COLOR.rgb = c;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/brightness = 1.0
shader_param/contrast = 1.0
shader_param/saturation = 1.0

[sub_resource type="InputEventAction" id=4]
action = "pause_toggle"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="health_bar" type="TextureProgress" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 20.0
margin_top = 10.0
margin_right = 720.0
margin_bottom = 110.0
rect_scale = Vector2( 0.4, 0.4 )
value = 100.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="health_bar"]

[node name="hp_history" type="TextureProgress" parent="health_bar"]
modulate = Color( 0.745098, 0.835294, 0, 1 )
show_behind_parent = true
margin_top = -2.77008
margin_right = 700.0
margin_bottom = 97.2299
value = 100.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon_panel" type="TextureRect" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 828.161
margin_top = 486.574
margin_right = 1008.16
margin_bottom = 586.574
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon_sprite" type="TextureRect" parent="weapon_panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump_notifier" type="Label" parent="."]
margin_top = 140.0
margin_right = 1024.0
margin_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="jump_notifier"]

[node name="progress_notifier" type="Label" parent="."]
margin_top = 140.0
margin_right = 1024.0
margin_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="progress_notifier"]

[node name="screen_stat" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_music" type="Button" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 912.638
margin_top = 15.9201
margin_right = 1064.64
margin_bottom = 167.92
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 0
theme = ExtResource( 8 )
enabled_focus_mode = 0
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mute_SFX" type="Button" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 863.707
margin_top = 15.7168
margin_right = 1015.71
margin_bottom = 167.717
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 0
theme = ExtResource( 8 )
enabled_focus_mode = 0
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_panel" parent="." instance=ExtResource( 4 )]

[node name="pause_button" type="Button" parent="."]
pause_mode = 2
margin_left = 967.514
margin_top = 14.0271
margin_right = 987.514
margin_bottom = 35.0271
rect_scale = Vector2( 2, 2 )
focus_mode = 0
theme = ExtResource( 8 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 5 )
text = "P"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" parent="." instance=ExtResource( 1 )]

[node name="anim_player" type="AnimationPlayer" parent="."]
[connection signal="tween_completed" from="health_bar/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="mute_music" to="." method="_on_mute_music_pressed"]
[connection signal="pressed" from="mute_SFX" to="." method="_on_mute_SFX_pressed"]
[connection signal="pressed" from="pause_button" to="." method="_on_pause_button_pressed"]
